--- a/.github/workflows/terraform_vm_test.yaml
+++ b/.github/workflows/terraform_vm_test.yaml
@@ -35,11 +35,11 @@ jobs:
     - name: Terraform Fmt
       run: terraform fmt -check
     - name: Terraform Init
-      run: terraform init  -backend-config=./backend
+      run: terraform init
     - name: Terraform Validate
       run: terraform validate
     - name: Terraform Plan
-      run: terraform plan -var-file=fixtures.tfvars
+      run: terraform plan
       env:
         TF_VAR_env: prod
   terraform_apply:
@@ -70,8 +70,8 @@ jobs:
     - name: Terraform Fmt
       run: terraform fmt -check
     - name: Terraform Init
-      run: terraform init  -backend-config=./backend
+      run: terraform init
     - name: Terraform Validate
       run: terraform validate
     - name: Terraform Apply
-      run: terraform apply -auto-approve -var-file=fixtures.tfvars
+      run: terraform apply -auto-approve
