--- a/.github/workflows/terraform_vm_test.yaml
+++ b/.github/workflows/terraform_vm_test.yaml
@@ -12,7 +12,7 @@ jobs:
   terraform_plan:
     name: 'Terraform CI'
     env:
-      TF_CLI_ARGS: '-no-color -backend-config=backend'
+      TF_CLI_ARGS: '-no-color'
       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
