--- a/.github/workflows/t.yaml
+++ b/.github/workflows/t.yaml
@@ -32,20 +32,18 @@ jobs:
           echo "ARM_SUBSCRIPTION_ID=${{ secrets.ARM_SUBSCRIPTION_ID }}" >> $GITHUB_ENV
           fi
           echo ${{ env.ARM_SUBSCRIPTION_ID }}
-      # - name: Install Terraform
-      #   uses: hashicorp/setup-terraform@v1
-      # - name: Terraform fmt
-      #   id: fmt
-      #   run: terraform fmt -check
-      # - name: Terraform Init
-      #   id: init
-      #   run: |
-      #     terraform init
-      # - name: Terraform Validate
-      #   id: validate
-      #   run: terraform validate
-      # - name: Terraform Apply
-      #   id: apply
-      #   run: terraform apply -auto-approve -var-file="${{ env.TFVARS_FILE_PATH }}/${{ github.event.inputs.environment_name }}.tfvars"
-      # - name: Terraform Force Copy
-      #   run: terraform init -force-copy
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v1
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt -check
+      - name: Terraform Init
+        id: init
+        run: |
+          terraform init
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate
+      - name: Terraform Apply
+        id: apply
+        run: terraform apply -auto-approve
