--- a/.github/workflows/t.yaml
+++ b/.github/workflows/t.yaml
@@ -19,20 +19,20 @@ jobs:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      # ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       TFVARS_FILE_PATH: ./project_spaces
     steps:
       - name: Checkout Source Code
         uses: actions/checkout@v2
-      # - name: Setup subscription_id
-      #   run: |
-      #     subscription_id=$(awk '/subscription_id/{print $NF}' project_spaces/example_app.tfvars | tr -d '[:space:]' | tr -d '"')
-      #     if [[ ${subscription_id//-/} =~ ^[[:xdigit:]]{32}$ ]]; then
-      #     echo "ARM_SUBSCRIPTION_ID=$subscription_id" >> $GITHUB_ENV
-      #     else
-      #     echo "ARM_SUBSCRIPTION_ID=${{ secrets.ARM_SUBSCRIPTION_ID }}" >> $GITHUB_ENV
-      #     fi
-      #     echo ${{ env.ARM_SUBSCRIPTION_ID }}
+      - name: Setup subscription_id
+        run: |
+          subscription_id=$(awk '/subscription_id/{print $NF}' project_spaces/example_app.tfvars | tr -d '[:space:]' | tr -d '"')
+          if [[ ${subscription_id//-/} =~ ^[[:xdigit:]]{32}$ ]]; then
+          echo "ARM_SUBSCRIPTION_ID=$subscription_id" >> $GITHUB_ENV
+          else
+          echo "ARM_SUBSCRIPTION_ID=${{ secrets.ARM_SUBSCRIPTION_ID }}" >> $GITHUB_ENV
+          fi
+          echo ${{ env.ARM_SUBSCRIPTION_ID }}
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v1
       - name: Terraform fmt
